--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,7 +3,7 @@
     <style name="Theme.Swipe_Search" parent="android:Theme.DeviceDefault.NoActionBar">
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">@color/black</item>
-        <item name="android:background">@android:color/white</item>
+        <item name="android:background">@android:color/black</item>
         <!-- Customize your theme here. -->
     </style>
 
